<resources>
    <string name="app_name">CMIP2015</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email_connect">Connect with email</string>
    <string name="skip_connect">Skip</string>
    <string name="app_logo">CMIP Logo</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="appliance_thumbnail">Appliance Thumbnail</string>
    <string name="title_activity_bundles">Bundles</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="bundle_tab_titles">
        <item>Light</item>
        <item>Medium</item>
        <item>Heavy</item>
    </string-array>
    <string name="title_activity_user_appliance_ativity">UserApplianceAtivity</string>
    <string name="No_appliances_added">No appliances added</string>
    <string name="banner_image_description">The app\'s banner image</string>
</resources>
