<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_blue_grey_800">

    <ImageView
        android:layout_centerInParent="true"
        android:id="@+id/splash_icon"
        android:src="@drawable/ic_launcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_logo"/>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGoogleConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_connect"
            android:id="@+id/btnEmailConnect" />

        <Button
            android:elevation="5dp"
            android:id="@+id/btnSkipConnect"
            android:text="@string/skip_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Button" />

    </LinearLayout>
</RelativeLayout>